--- a/app/src/main/res/layout/single_item_photos.xml
+++ b/app/src/main/res/layout/single_item_photos.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/_200sdp"
-    android:src="@drawable/ic_launcher_background"
-    android:scaleType="fitXY"
-    android:layout_margin="@dimen/_5sdp"
-    android:contentDescription="@string/app_name">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <import type="android.view.View"/>
+    </data>
+
+    <RelativeLayout
+       android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imgV"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_200sdp"
+            android:src="@drawable/ic_launcher_background"
+            android:scaleType="fitXY"
+            android:layout_margin="@dimen/_5sdp"
+            android:contentDescription="@string/app_name"/>
 
 
-</ImageView>
+    </RelativeLayout>
+</layout>
