--- a/app/src/main/res/layout/single_item_photos.xml
+++ b/app/src/main/res/layout/single_item_photos.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <data>
-        <import type="android.view.View"/>
-    </data>
-
-    <RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -18,6 +12,4 @@
             android:layout_margin="@dimen/_5sdp"
             android:contentDescription="@string/app_name"/>
 
-
-    </RelativeLayout>
-</layout>
+</RelativeLayout>
